solved connectivity issues